<resources>
    <string name="app_name">StreamChat</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_guest">Continue as guest</string>
    <string name="or">Or</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="start_a_new_chat">Start a new chat</string>
    <string name="logout">Logout User</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="search">Search</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Your name</string>
    <string name="already_a_user_sign_in">Already a user? Sign In</string>
    <string name="please_enter_these_details_to_continue">Please enter these details to continue</string>
    <string name="invalid_name">Invalid Name!</string>
    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members</string>
    <string name="members">Members</string>
    <string name="create_channel">Create Channel</string>
    <string name="search_username">Search Username</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="mentions">Mentions</string>
    <string name="star_message">Star Message</string>
    <string name="send_message">Send Message</string>
    <string name="record_audio">Record Audio</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="permission_permanently_denied">Permissions permanently denied!</string>
    <string name="not_now">Not Now</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
</resources>